// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`EbsStorageStack Snapshots EbsStorageStack matches snapshot 1`] = `
{
  "Metadata": {
    "cdk_nag": {
      "rules_to_suppress": [
        {
          "applies_to": [
            "Policy::arn:<AWS::Partition>:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
          ],
          "id": "AwsSolutions-IAM4",
          "reason": "AWS managed policies are used for Lambda functions created by CDK for custom resources (Auto Scaling lifecycle hooks, VPC default security group restriction, EventBridge targets). These are standard CloudFormation custom resource Lambda functions managed by CDK.",
        },
        {
          "applies_to": [
            "Resource::*",
          ],
          "id": "AwsSolutions-IAM5",
          "reason": "Wildcard permissions are used by CDK-managed custom resource Lambdas for EventBridge to CloudWatch Logs integration and other CDK framework operations. This is required by the CDK framework to manage resource policies and cannot be scoped further. This is standard CDK behavior.",
        },
        {
          "applies_to": [
            "Action::ecs:Submit*",
          ],
          "id": "AwsSolutions-IAM5",
          "reason": "ECS Container Instance IAM role requires wildcard action permissions (ecs:Submit*) to communicate with ECS control plane. This is a standard permission for ECS EC2 instances as documented in AWS ECS best practices and is created by CDK's Auto Scaling Group construct.",
        },
        {
          "applies_to": [
            {
              "regex": "/^Resource::arn:(aws|<AWS::Partition>):autoscaling:.*:.*:autoScalingGroup:\\*:autoScalingGroupName\\/<.*>$/",
            },
          ],
          "id": "AwsSolutions-IAM5",
          "reason": "Auto Scaling Group lifecycle hook Lambda (DrainECSHook) requires permissions to manage Auto Scaling lifecycle actions. The wildcard is scoped to the specific Auto Scaling Group name pattern and is necessary for proper instance lifecycle management during ECS task draining. This is a CDK-managed resource.",
        },
        {
          "id": "AwsSolutions-L1",
          "reason": "Lambda runtime versions are managed by CDK for custom resources. CDK automatically updates these with new releases. Upgrading CDK version will update these runtimes.",
        },
        {
          "applies_to": [
            "Resource::*",
          ],
          "id": "AwsSolutions-IAM5",
          "reason": "Monitoring services (Prometheus, Grafana) require read access to CloudWatch metrics and logs across the account for comprehensive observability. This is standard practice for monitoring solutions and is read-only access.",
        },
        {
          "applies_to": [
            {
              "regex": "/^Resource::arn:aws:logs:.*:.*:log-group:\\*$/",
            },
            {
              "regex": "/^Resource::arn:aws:logs:.*:.*:log-group:\\*:\\*$/",
            },
          ],
          "id": "AwsSolutions-IAM5",
          "reason": "Grafana CloudWatch datasource requires permissions to query logs across all log groups in the account. The wildcard is scoped to the account and region, and permissions are read-only.",
        },
        {
          "applies_to": [
            {
              "regex": "/^Resource::arn:aws:logs:.*:.*:log-group:<.*>:\\*$/",
            },
          ],
          "id": "AwsSolutions-IAM5",
          "reason": "ECS task roles require CloudWatch Logs permissions to write to their specific log groups. The wildcard allows log stream creation within the task's designated log group, which is necessary for ECS container logging.",
        },
        {
          "applies_to": [
            {
              "regex": "/^Resource::arn:aws:ssm:.*:.*:parameter/monitoring/.*\\*$/",
            },
          ],
          "id": "AwsSolutions-IAM5",
          "reason": "EC2 instances in monitoring infrastructure require read access to SSM parameters under the monitoring stack path for EFS setup scripts and configuration. The wildcard is scoped to the specific stack's parameter namespace (/monitoring/{stackName}/*) and provides read-only access to configuration data.",
        },
        {
          "id": "AwsSolutions-SNS3",
          "reason": "SNS topic is used for internal ECS lifecycle hooks managed by CDK for the monitoring cluster. SSL enforcement is handled by AWS internal services. The lifecycle hook topic is used for draining ECS tasks during instance termination.",
        },
        {
          "id": "AwsSolutions-EC23",
          "reason": "EFS security group allows NFS access from VPC CIDR block only. The CIDR block is dynamically resolved from VPC configuration using CloudFormation intrinsic functions, which CDK Nag cannot validate at synthesis time. This is secure as it restricts access to the VPC's private network only.",
        },
        {
          "id": "CdkNagValidationFailure",
          "reason": "CDK Nag validation failure occurs when CloudFormation intrinsic functions (like Fn::GetAtt for VPC CIDR) are used in security group rules. This is expected behavior and the actual values will be resolved at deployment time with proper CIDR restrictions.",
        },
        {
          "applies_to": [
            "Policy::arn:<AWS::Partition>:iam::aws:policy/service-role/AWSLambdaVPCAccessExecutionRole",
          ],
          "id": "AwsSolutions-IAM4",
          "reason": "EFS initialization Lambda requires AWS managed policy AWSLambdaVPCAccessExecutionRole for VPC access to mount EFS. This is a standard AWS managed policy for Lambda functions that need VPC access and cannot be replaced with a custom policy.",
        },
        {
          "applies_to": [
            {
              "regex": "/^Resource::arn:aws:ssm:.*:.*:parameter/monitoring/.*\\*$/",
            },
          ],
          "id": "AwsSolutions-IAM5",
          "reason": "EFS initialization Lambda requires wildcard access to SSM parameters under the monitoring stack path for reading configuration. The wildcard is scoped to the specific stack's parameter namespace and is read-only access.",
        },
        {
          "applies_to": [
            "Resource::<*Function*.Arn>:*",
            "Resource::<*>:*",
            {
              "regex": "/^Resource::<.*Function.*\\.Arn>:\\*$/g",
            },
            "Resource::<EfsInitLambdaFunctionFC8F36D2.Arn>:*",
          ],
          "id": "AwsSolutions-IAM5",
          "reason": "CDK Custom Resource Provider framework requires wildcard permissions on the Lambda function ARN for invoking the function. This is managed by CDK and is necessary for the Custom Resource lifecycle management.",
        },
      ],
    },
  },
  "Outputs": {
    "GrafanaVolumeSize": {
      "Description": "Grafana EBS volume size in GB",
      "Export": {
        "Name": "test-grafana-volume-size",
      },
      "Value": "50",
    },
    "PrometheusVolumeSize": {
      "Description": "Prometheus EBS volume size in GB",
      "Export": {
        "Name": "test-prometheus-volume-size",
      },
      "Value": "100",
    },
    "VolumeType": {
      "Description": "EBS volume type for data volumes",
      "Export": {
        "Name": "test-ebs-volume-type",
      },
      "Value": "gp3",
    },
  },
  "Parameters": {
    "BootstrapVersion": {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": {
    "GrafanaDashboardConfigC8728B71": {
      "Properties": {
        "Description": "Grafana dashboard provisioning configuration (JSON)",
        "Name": "/monitoring/test/grafana-dashboard-config",
        "Tags": {
          "Environment": "test",
          "Layer": "Storage",
          "ManagedBy": "CDK",
          "ProjectType": "monitoring",
          "Stack": "EbsStorage",
        },
        "Tier": "Standard",
        "Type": "String",
        "Value": "{
  "apiVersion": 1,
  "providers": [
    {
      "name": "Default",
      "orgId": 1,
      "folder": "",
      "type": "file",
      "disableDeletion": false,
      "updateIntervalSeconds": 10,
      "allowUiUpdates": true,
      "options": {
        "path": "/var/lib/grafana/dashboards"
      }
    }
  ]
}",
      },
      "Type": "AWS::SSM::Parameter",
    },
    "GrafanaDatasourceConfig688C0C65": {
      "Properties": {
        "Description": "Grafana datasource configuration (JSON)",
        "Name": "/monitoring/test/grafana-datasource-config",
        "Tags": {
          "Environment": "test",
          "Layer": "Storage",
          "ManagedBy": "CDK",
          "ProjectType": "monitoring",
          "Stack": "EbsStorage",
        },
        "Tier": "Standard",
        "Type": "String",
        "Value": "{
  "apiVersion": 1,
  "datasources": [
    {
      "name": "Prometheus",
      "type": "prometheus",
      "uid": "prometheus",
      "access": "proxy",
      "url": "http://HOST_IP_PLACEHOLDER:9090/prometheus",
      "isDefault": true,
      "editable": true
    }
  ]
}",
      },
      "Type": "AWS::SSM::Parameter",
    },
    "GrafanaVolumeSizeParam8D19D660": {
      "Properties": {
        "Description": "Grafana EBS volume size in GB",
        "Name": "/monitoring/test/ebs/grafana-volume-size",
        "Tags": {
          "Environment": "test",
          "Layer": "Storage",
          "ManagedBy": "CDK",
          "ProjectType": "monitoring",
          "Stack": "EbsStorage",
        },
        "Type": "String",
        "Value": "50",
      },
      "Type": "AWS::SSM::Parameter",
    },
    "PrometheusConfig76F4735C": {
      "Properties": {
        "Description": "Prometheus scrape configuration (JSON)",
        "Name": "/monitoring/test/prometheus-config",
        "Tags": {
          "Environment": "test",
          "Layer": "Storage",
          "ManagedBy": "CDK",
          "ProjectType": "monitoring",
          "Stack": "EbsStorage",
        },
        "Tier": "Standard",
        "Type": "String",
        "Value": "{
  "global": {
    "scrape_interval": "15s",
    "evaluation_interval": "15s"
  },
  "scrape_configs": [
    {
      "job_name": "prometheus",
      "static_configs": [
        {
          "targets": [
            "localhost:9090"
          ]
        }
      ],
      "metrics_path": "/prometheus/metrics"
    },
    {
      "job_name": "node-exporter",
      "static_configs": [
        {
          "targets": [
            "localhost:9100"
          ]
        }
      ]
    },
    {
      "job_name": "node-exporter-pipeline",
      "ec2_sd_configs": [
        {
          "region": "eu-west-1",
          "port": 9100,
          "filters": [
            {
              "name": "tag:Service",
              "values": [
                "monitoring"
              ]
            },
            {
              "name": "tag:Environment",
              "values": [
                "test"
              ]
            },
            {
              "name": "instance-state-name",
              "values": [
                "running"
              ]
            }
          ]
        }
      ]
    }
  ]
}",
      },
      "Type": "AWS::SSM::Parameter",
    },
    "PrometheusVolumeSizeParam88B9DF0B": {
      "Properties": {
        "Description": "Prometheus EBS volume size in GB",
        "Name": "/monitoring/test/ebs/prometheus-volume-size",
        "Tags": {
          "Environment": "test",
          "Layer": "Storage",
          "ManagedBy": "CDK",
          "ProjectType": "monitoring",
          "Stack": "EbsStorage",
        },
        "Type": "String",
        "Value": "100",
      },
      "Type": "AWS::SSM::Parameter",
    },
    "VolumeTypeParam4FB96373": {
      "Properties": {
        "Description": "EBS volume type for data volumes",
        "Name": "/monitoring/test/ebs/volume-type",
        "Tags": {
          "Environment": "test",
          "Layer": "Storage",
          "ManagedBy": "CDK",
          "ProjectType": "monitoring",
          "Stack": "EbsStorage",
        },
        "Type": "String",
        "Value": "gp3",
      },
      "Type": "AWS::SSM::Parameter",
    },
  },
  "Rules": {
    "CheckBootstrapVersion": {
      "Assertions": [
        {
          "Assert": {
            "Fn::Not": [
              {
                "Fn::Contains": [
                  [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;

exports[`EbsStorageStack Snapshots SSM parameters match snapshot 1`] = `
{
  "GrafanaDashboardConfigC8728B71": {
    "Properties": {
      "Description": "Grafana dashboard provisioning configuration (JSON)",
      "Name": "/monitoring/test/grafana-dashboard-config",
      "Tags": {
        "Environment": "test",
        "Layer": "Storage",
        "ManagedBy": "CDK",
        "ProjectType": "monitoring",
        "Stack": "EbsStorage",
      },
      "Tier": "Standard",
      "Type": "String",
      "Value": "{
  "apiVersion": 1,
  "providers": [
    {
      "name": "Default",
      "orgId": 1,
      "folder": "",
      "type": "file",
      "disableDeletion": false,
      "updateIntervalSeconds": 10,
      "allowUiUpdates": true,
      "options": {
        "path": "/var/lib/grafana/dashboards"
      }
    }
  ]
}",
    },
    "Type": "AWS::SSM::Parameter",
  },
  "GrafanaDatasourceConfig688C0C65": {
    "Properties": {
      "Description": "Grafana datasource configuration (JSON)",
      "Name": "/monitoring/test/grafana-datasource-config",
      "Tags": {
        "Environment": "test",
        "Layer": "Storage",
        "ManagedBy": "CDK",
        "ProjectType": "monitoring",
        "Stack": "EbsStorage",
      },
      "Tier": "Standard",
      "Type": "String",
      "Value": "{
  "apiVersion": 1,
  "datasources": [
    {
      "name": "Prometheus",
      "type": "prometheus",
      "uid": "prometheus",
      "access": "proxy",
      "url": "http://HOST_IP_PLACEHOLDER:9090/prometheus",
      "isDefault": true,
      "editable": true
    }
  ]
}",
    },
    "Type": "AWS::SSM::Parameter",
  },
  "GrafanaVolumeSizeParam8D19D660": {
    "Properties": {
      "Description": "Grafana EBS volume size in GB",
      "Name": "/monitoring/test/ebs/grafana-volume-size",
      "Tags": {
        "Environment": "test",
        "Layer": "Storage",
        "ManagedBy": "CDK",
        "ProjectType": "monitoring",
        "Stack": "EbsStorage",
      },
      "Type": "String",
      "Value": "50",
    },
    "Type": "AWS::SSM::Parameter",
  },
  "PrometheusConfig76F4735C": {
    "Properties": {
      "Description": "Prometheus scrape configuration (JSON)",
      "Name": "/monitoring/test/prometheus-config",
      "Tags": {
        "Environment": "test",
        "Layer": "Storage",
        "ManagedBy": "CDK",
        "ProjectType": "monitoring",
        "Stack": "EbsStorage",
      },
      "Tier": "Standard",
      "Type": "String",
      "Value": "{
  "global": {
    "scrape_interval": "15s",
    "evaluation_interval": "15s"
  },
  "scrape_configs": [
    {
      "job_name": "prometheus",
      "static_configs": [
        {
          "targets": [
            "localhost:9090"
          ]
        }
      ],
      "metrics_path": "/prometheus/metrics"
    },
    {
      "job_name": "node-exporter",
      "static_configs": [
        {
          "targets": [
            "localhost:9100"
          ]
        }
      ]
    },
    {
      "job_name": "node-exporter-pipeline",
      "ec2_sd_configs": [
        {
          "region": "eu-west-1",
          "port": 9100,
          "filters": [
            {
              "name": "tag:Service",
              "values": [
                "monitoring"
              ]
            },
            {
              "name": "tag:Environment",
              "values": [
                "test"
              ]
            },
            {
              "name": "instance-state-name",
              "values": [
                "running"
              ]
            }
          ]
        }
      ]
    }
  ]
}",
    },
    "Type": "AWS::SSM::Parameter",
  },
  "PrometheusVolumeSizeParam88B9DF0B": {
    "Properties": {
      "Description": "Prometheus EBS volume size in GB",
      "Name": "/monitoring/test/ebs/prometheus-volume-size",
      "Tags": {
        "Environment": "test",
        "Layer": "Storage",
        "ManagedBy": "CDK",
        "ProjectType": "monitoring",
        "Stack": "EbsStorage",
      },
      "Type": "String",
      "Value": "100",
    },
    "Type": "AWS::SSM::Parameter",
  },
  "VolumeTypeParam4FB96373": {
    "Properties": {
      "Description": "EBS volume type for data volumes",
      "Name": "/monitoring/test/ebs/volume-type",
      "Tags": {
        "Environment": "test",
        "Layer": "Storage",
        "ManagedBy": "CDK",
        "ProjectType": "monitoring",
        "Stack": "EbsStorage",
      },
      "Type": "String",
      "Value": "gp3",
    },
    "Type": "AWS::SSM::Parameter",
  },
}
`;
